# smart-analysis

./: .gitignore  README.md  pyproject.toml
chat/: analysis_results_20241113_151559.txt
flight_analysis/: __init__.py  analysis_results_20241111_224939.txt  interactive.py  main.py  processor.py  run_streamlit.py
flight_analysis/analysis/: analyst.py
flight_analysis/data_cleaning/: auto_cleaner.py  column_renamer.py  data_merger.py
flight_analysis/database/: sqlite_manager.py
flight_analysis/streamlit/: app.py
flight_analysis/utils/: logging_config.py
tests/: conftest.py
tests/data_cleaning/: test_auto_cleaner.py  test_column_renamer.py
tests/database/: test_sqlite_manager.py
