[tool.poetry]
name = "flight-analysis"
version = "0.1.0"
description = "Flight booking analysis system using LLMs"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pandas = "^2.1.0"
openai = "^1.12.0"
llama-index = "^0.9.28"
numpy = "^1.24.0"
python-dotenv = "^1.0.0"
tabulate = "^0.9.0"
rich = "^13.9.4"
pydantic-settings = "^2.6.1"
plotly = "^5.24.1"
crewai = "0.76.9"
langchain = ">=0.3.1,<0.4.0"
crewai-tools = "0.13.4"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
streamlit = "^1.40.0"
fuzzywuzzy = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
